# Altair-Vega

./: .env.development  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: deploy.sh  dev.sh  release-artifacts.sh  startup.ps1  startup.sh  validate.sh
src/: bootstrap.rs  browser_peer.rs  code.rs  control.rs  files.rs  lib.rs  main.rs  messaging.rs  pairing.rs  probe.rs  rendezvous.rs  runtime.rs  sync.rs  sync_docs.rs
web/: rendezvous-protocol.ts
web/browser-wasm/: Cargo.toml  LICENSE
web/browser-wasm/src/: lib.rs
web/frontend/: dev-rendezvous.ts  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
web/frontend/src/: App.tsx  index.tsx  main.ts
web/frontend/src/components/: ChatBubble.tsx  ChatThread.tsx  CodeInput.tsx  ComposeBar.tsx  ConnectionStatus.tsx  EmptyState.tsx  FileCard.tsx  Header.css  Header.tsx  ImageViewer.tsx  PeerAvatar.tsx  PeerBanner.tsx  SettingsDialog.tsx  SidebarFiles.tsx  Toast.tsx
web/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ContextMenu.tsx  Dialog.tsx  Input.tsx
web/frontend/src/lib/: rendezvous.ts  state.ts  types.ts
web/rendezvous-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
web/rendezvous-worker/src/: index.ts
