[package]
name = "altair-vega"
version = "0.9.0-RC1"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/EL-File4138/Altair-Vega"
description = "Peer-to-peer transfer for messages, files, and two-peer folder sync."

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
iroh-tickets = "0.4.0"
rand = "0.8.5"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spake2 = { version = "0.4.0", features = ["getrandom"] }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = "0.3.31"
iroh = { version = "0.97.0", default-features = false, features = ["address-lookup-mdns"] }
iroh-blobs = { version = "0.99.0", default-features = false, features = ["fs-store"] }
iroh-docs = { version = "0.97.0", default-features = false, features = ["fs-store"] }
iroh-gossip = "0.97.0"
notify = "8.2.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iroh = { version = "0.97.0", default-features = false }
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
