[package]
name = "altair-vega-browser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
altair-vega = { path = "../.." }
anyhow = "1.0.100"
async-channel = "2.5.0"
blake3 = "1.8.2"
hex = "0.4.3"
iroh = "0.97.0"
js-sys = "0.3.82"
n0-future = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
wasm-streams = "0.4.2"
console_error_panic_hook = "0.1.7"
